# countdown

./: LICENSE  README.md  TODO.md  countdown.sh  pyproject.toml
docs/: design.md  linux_tips.md  tips.md
src/countdown/: __main__.py  cli.py  config.py  controller.py  log.py  screen.py  signal.py  text.py
